# echoputer

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
offload/: .gitignore  README.md  offload-install.sh  server-install.sh
offload/crack-server/: Cargo.toml
offload/crack-server/.cargo/: config.toml
offload/crack-server/src/: main.rs
src/: config.rs  i18n.rs  main.rs  palette.rs  selftest.rs  theme.rs
src/apps/: browser.rs  calc.rs  charge.rs  chip8.rs  convert.rs  dice.rs  g2048.rs  games.rs  hacking.rs  level.rs  life.rs  menu.rs  misc.rs  mod.rs  notes.rs  pong.rs  qr.rs  repl.rs  scales.rs  settings.rs  splash.rs  stopwatch.rs  synth.rs  sysinfo.rs  tetris.rs  ui.rs  webui.rs  wiki.rs
src/apps/emu/: ffi.rs  input.rs  mod.rs  rom.rs  test_rom.rs  video.rs
src/apps/games/: g2048.rs  mod.rs  pong.rs  snake.rs  tetris.rs
src/apps/misc/: calc.rs  chip8.rs  convert.rs  dice.rs  ir.rs  level.rs  mod.rs  qr.rs  qr_encode.rs  recorder.rs  remote.rs  stepcount.rs
src/apps/player/: mod.rs  mp3.rs  resample.rs  wav.rs
src/hal/: battery.rs  bmi270.rs  bmi270_config.rs  es8311.rs  fb.rs  ir.rs  keymap.rs  mod.rs  tca8418.rs  usb_hid.rs  ws2812.rs
src/i18n/: app.rs  calc.rs  charge.rs  chip8.rs  convert.rs  dice.rs  emu.rs  g2048.rs  games.rs  hacking.rs  ir.rs  level.rs  menu.rs  misc.rs  mod.rs  notes.rs  player.rs  pong.rs  qr.rs  recorder.rs  remote.rs  settings.rs  snake.rs  stepcount.rs  stopwatch.rs  sysinfo.rs  tetris.rs  webui.rs  wiki.rs
src/radio/: ble_spam.rs  camscan.rs  digest.rs  http.rs  mod.rs  netscan.rs  offload.rs  portal.rs  sha256.rs  wardrive.rs  webui.rs  webui_dashboard.html  wifi_frames.rs  wpa.rs
tools/: README.md  fakecam.py
