[package]
name = "echoputer"
version = "0.1.0"
edition = "2021"
description = "A small no_std operating system for the M5Stack Cardputer ADV"
license = "MIT"

[[bin]]
name = "echoputer"
path = "src/main.rs"

[features]
# USB-serial radio self-test: at boot, drive every Hacking tool and print results
# over serial (no keypresses needed), then fall through to the normal menu.
selftest = []
# Network-stack self-test: at boot, run the HTTP-client core tests — canned
# real-world response parses + request-builder checks + a smoltcp LOOPBACK TCP
# round-trip against a temp in-firmware HTTP server (no WiFi/AP/DHCP needed) —
# then fall through to the normal menu. Needs smoltcp's alloc-backed Loopback.
networktest = ["smoltcp/alloc"]
# Boot-time IR self-test: loops through protocols/codes/carrier frequencies on GPIO44,
# logging each over serial, so we can find what a TV actually responds to (point the
# Cardputer at the TV, flash --features irtest, watch which IRTEST # toggles it).
irtest = []
# Diagnostic: print every raw keyboard event (down/up + row/col) over serial, to
# see whether the TCA8418 reports key releases. Used to design hold-to-repeat.
keylog = []
# Diagnostic: at boot, probe for external PSRAM and print its size over serial
# (decides the emulator's ROM-storage strategy). Off in normal builds.
psramprobe = []
# Game Boy emulator (Peanut-GB, vendored C compiled via build.rs + cc). Off by
# default so the normal build and CI need neither the vendored C nor the GCC
# cross-compiler. Turn on with `cargo build --release --features emu`.
emu = []
# Boot self-test for the emulator: runs an embedded test ROM for 60 frames at
# boot and prints gb_init/FPS/PPU diagnostics over serial, then falls through to
# the normal menu. Implies `emu`. For on-device validation without an SD ROM.
emutest = ["emu"]
# Game Boy *Color* support: swap the DMG-only Peanut-GB core for Walnut-CGB (adds
# CGB colour, plays DMG too). Larger core (16 KB VRAM + 32 KB WRAM banks), so it
# is a separate build — `emu` alone stays the lean, validated DMG emulator.
emugbc = ["emu"]
# Diagnostic: print I2S audio health over serial once a second (bytes pushed vs the
# 64000 B/s real-time target, underruns, max free-space seen). For debugging audio
# stutter without a logic analyzer; open a serial monitor at startup. Off normally.
audiodiag = []
# Audio Player MP3 support: vendors the minimp3 decoder (single-header CC0),
# compiled via build.rs + cc with the Xtensa GCC. Off by default so the normal
# build and CI need neither the vendored C nor the cross-compiler — WAV playback
# is pure Rust and always available; this feature only adds .mp3 decoding.
# Turn on with `cargo build --release --features player`.
player = []
# Enable real deauth/disassoc frame TX. The IDF v5.5 WiFi blob's
# `ieee80211_raw_frame_sanity_check` rejects the deauth subtype via `esp_wifi_80211_tx`
# (the default build surfaces this honestly). This feature defines a strong override of
# that symbol that returns OK, so deauth frames transmit — letting Handshake Capture
# knock a client off to force an immediate re-association (4-way) instead of waiting for a
# natural one. build.rs adds `-Wl,--allow-multiple-definition` so our override wins the
# link. Off by default; opt in with `--features deauth`. Ineffective against PMF/802.11w
# (WPA3 + PMF-enabled WPA2) networks, which ignore unprotected deauth.
deauth = []

[dependencies]
# Core HAL. `unstable` is required for the I2S driver (audio) and a few helpers.
esp-hal = { version = "1.1.1", features = ["esp32s3", "unstable"] }
# Raw PAC (same version esp-hal pulls in -> one unified instance): used ONLY to clear the
# RTC_CNTL digital pad-hold on GPIO44 before driving the IR LED (esp-hal never unholds a
# digital pad, so the ROM/UART-detach can leave GPIO44=U0RXD frozen → IR output never reaches
# the pad despite a correct GPIO config).
esp32s3 = "0.35.2"
esp-backtrace = { version = "0.19.0", features = ["esp32s3", "panic-handler", "println"] }
# default feature "auto" picks the USB Serial/JTAG printer on the ESP32-S3.
esp-println = { version = "0.17.0", features = ["esp32s3"] }

# Display + graphics (no heap required).
embedded-graphics = "0.8"
mipidsi = "0.10"
embedded-hal-bus = "0.3"
embedded-hal = "1.0"   # for naming the I2c/SpiBus traits in our drivers

# Float helpers for building the wavetable / frequency tables at boot.
libm = "0.2"

# SD card + FAT for the file browser.
embedded-sdmmc = { version = "0.9.0", default-features = false }
# provides the esp_app_desc!() macro — the ESP-IDF app descriptor the bootloader
# (and the M5 launcher) reads to validate the image.
esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32s3"] }

# Radio stack for the Hacking menu (WiFi/BLE recon). esp-radio (renamed esp-wifi)
# needs a preemptive scheduler (esp-rtos) + a heap (esp-alloc).
esp-alloc = { version = "0.10.0" }
esp-rtos = { version = "0.3.0", features = ["esp32s3", "esp-radio", "esp-alloc"] }
esp-radio = { version = "0.18.0", features = ["esp32s3", "wifi", "ble", "sniffer", "unstable", "esp-alloc"] }
# block_on / select: drive esp-radio's async scan + BLE HCI from our sync main loop.
embassy-futures = "0.1"
# typed HCI commands/events for the BLE scanner (esp-radio's BleConnector is a bt-hci Transport).
bt-hci = "0.8"

# no_std TCP/IP stack for the Evil Portal (captive portal). We feed it raw Ethernet
# frames from the SoftAP interface and hand-roll the DHCP/DNS servers + HTTP on top.
# no-alloc: all socket buffers are fixed caller-owned arrays (no "alloc"/"std" feature).
smoltcp = { version = "0.13", default-features = false, features = [
    "medium-ethernet",
    "proto-ipv4",
    "proto-dhcpv4",
    "socket-udp",
    "socket-tcp",
    "socket-dhcpv4",
] }

# USB HID (mouse+keyboard) for the Misc "Remote" app. Rides the S3 USB-OTG via
# esp-hal otg_fs + usb-device; the OTG peripheral is claimed LAZILY (only when the
# user switches Remote to USB) so the USB-Serial-JTAG console survives by default.
# usb-device 0.3 is also pulled transitively by esp-synopsys-usb-otg; pin it here
# so we can name its types directly (versions unify on 0.3.x).
usb-device = "0.3"
usbd-hid = "0.8"

[build-dependencies]
# Compiles the vendored Game Boy core (Peanut-GB) with the xtensa GCC, but only
# when the `emu` feature is on (build.rs early-returns otherwise).
cc = "1"

[profile.release]
opt-level = 3      # audio synth runs in the main loop; keep it fast (flash is 8MB, size is not a concern)
lto = "fat"
codegen-units = 1
overflow-checks = false
debug = true       # symbols help esp-backtrace; they are stripped from the flashed image

[profile.dev]
opt-level = 2      # unoptimized audio underruns; keep some opt even in dev

# the radio stack must be optimized or it won't work reliably
[profile.dev.package.esp-radio]
opt-level = 3
[profile.dev.package.esp-rtos]
opt-level = 3
